@@ -1,6 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.6:
 *03/10/06:
+  * Fix rendering of offscreen windows (remove if !visible tests) (Simon)
+    FbWinFrame.cc
   * Fix shaped windows+menus (Simon)
     - make sure all existing menus use shape
     - fix Shape itself, particularly to work properly with borders
